--- a/package.json
+++ b/package.json
@@ -9,7 +9,8 @@
     "react": "^16.13.1",
     "react-dom": "^16.13.1",
     "react-hook-form": "^6.8.6",
-    "react-scripts": "3.4.3"
+    "react-scripts": "3.4.3",
+    "uuid": "^3.3.2"
   },
   "scripts": {
     "start": "react-scripts start",
