--- a/package.json
+++ b/package.json
@@ -9,6 +9,7 @@
     "react": "^16.13.1",
     "react-dom": "^16.13.1",
     "react-hook-form": "^6.8.6",
+    "react-image-file-resizer": "^0.3.8",
     "react-scripts": "3.4.3",
     "uuid": "^3.3.2"
   },
